# jasper

./: .gitignore  jasper.py  scripts.txt
1_spider/: spider.py
2_before/: clean_documents.py  clean_format.py  clean_format_file.py  gen_vocab_file.py  gen_vocab_single.py  generate_files.py
3_processing/: CMakeLists.txt  estimate.py  inference.py  lda  lda-data.c
3_processing/classes/: document.py  ldamodel.py
3_processing/lda-c-dist/: lda
3_processing/lda-c-dist/tom/: 000.other  005.other  015.other  020.other  025.other  final.other  result.out  resultresult.txt
4_hierarchy/: gen_sub_topics.py  gen_sub_topics_confidence.py  gen_sub_topics_highest.py  reindex_files.py
5_after/: print_topics.py
6_portal/: beta_to_json.py  document_list_generator.py  formatted_to_json.py  gamma_to_json.py  relevant_topic_words.py
7_new_document/: analyse_document_classification.py  analyse_hierarchy_classification.py  find_index_word.py  find_vocab_topics.py  gen_topics_list.py  guess_new_document.py  outy  test_doc_guess_algorithm.py  test_module.py  utils.py
after/: beta_to_json.py  print_topics.py
after/for_portal/: gamma_to_json.py  relevant_topic_words.py  result_to_json.py
before/: clean_documents.py  clean_format_file.py  gen_vocab_file.py
debug/: format_translator.py
hierarchical/: gen_sub_topics.py
new_document/: .outy.swp  find_index_word.py  find_vocab_topics.py  here  test_doc
portal/: README.md
processing/: estimate.py  settings
spider/: spider.py
tools/: auto_runner.py  loading_bar_test.py  reindex_files.py  word_counter.pl
(+11260 files in other folders)
